--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,23 +34,12 @@
                 android:resource="@xml/searchable" />
         </activity>
 
-        <activity
-            android:name=".Nav"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.app.default_searchable"
-                android:value="Contacts" />
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
+        <activity android:name=".Nav"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateVisible"
+            android:screenOrientation="portrait">
+            <meta-data android:name = "android.support.PARENT_ACTIVITY"
+                android:value=".LoginActivity"/>
         </activity>
 
         <activity android:name=".ReportBug"
@@ -64,9 +53,6 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateVisible"
             android:screenOrientation="portrait"/>
-        <meta-data android:name = "android.support.PARENT_ACTIVITY"
-            android:value= ".Nav"/>
-
 
     </application>
 
