--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         </activity>
         <activity
             android:name=".ReportBug"
-            android:label="Report a bug"
+            android:label="Catalize"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|adjustResize">
             <meta-data
