--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-crash:9.4.0'
 
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.github.bumptech.glide:glide:3.6.0'
