--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
 
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
@@ -30,10 +31,11 @@
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
-
         </activity>
+
         <activity
             android:name=".ui.login.FireLoginActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
@@ -42,16 +44,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
+
         <activity
             android:name=".ui.login.RegisterActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
-
-
         </activity>
+
         <activity
             android:name=".Nav"
             android:screenOrientation="portrait"
@@ -61,6 +62,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".LoginActivity" />
         </activity>
+
         <activity
             android:name=".Log"
             android:label="Activity Log"
@@ -69,6 +71,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Nav" />
         </activity>
+
         <activity
             android:name=".ReportBug"
             android:label="Catalize"
@@ -78,6 +81,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Nav" />
         </activity>
+
         <activity
             android:name=".Account"
             android:label="Introduction"
@@ -87,6 +91,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Nav" />
         </activity>
+
         <activity
             android:name=".SettingsActivity"
             android:label="@string/settings"
@@ -96,10 +101,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Nav" />
         </activity>
+
         <activity
             android:name=".PagerActivity"
             android:label="@string/title_activity_pager"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
     </application>
 
